translation chekcout init

--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -9,6 +9,9 @@
     "paymentView": {
       "heading": "Koliko kosta psihološko savjetovanje?",
       "intro": "Ovdje možete naručiti psihološko savjetovanje. Cijenu za vase izbore mozete naci u doljnem dio stranice. Izaberite Skype-poziv, e-postu ili kombinaciju Skype-poziv i e-postu. Što više poziva ili sedmica e-poste odlučite da kupite, sto jeftinija je cena po pozivu i po sedmicu e-poste."
+    },
+    "checkoutView": {
+      "heading": "Potvrda narudžbe"
     }
   }
 }
