--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -56,7 +56,7 @@
         },
         "panic": {
           "name": "Panic",
-          "description": "Osjecate li anksioznost ili napad panike?"
+          "description": "Osjećate li anksioznost ili napad panike?"
         },
         "fobia": {
           "name": "Fobia",
