stripe error messages

--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -126,7 +126,7 @@
       "name": "Ime",
       "phone": "Telefon",
       "email": "E-pošta",
-      "comment": "Kommentar",
+      "comment": "Komentar",
       "back": "Natrag",
       "placeOrder": "Zakažite",
       "close": "Blizu",
