--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -168,7 +168,7 @@
           "description": "Osjećate li se tužno ili depresivno?"
         },
         "kids": {
-          "name": "Diete",
+          "name": "Dijete",
           "description": "Da li vaše dijete ima izlive bijesa?"
         },
         "weight": {
