--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -109,6 +109,40 @@
       "price": "Cijena",
       "writeCode": "Unesite kod"
     },
+    "privacyPolicyView": {
+      "heading": "Baunad privacy policy",
+      "preamble": "Your privacy is very important to us. We designed our Privacy Policy to make important disclosures about how you can use Zdravlje.nu and how we collect and use your content and information. We encourage you to read the Privacy Policy in its entirety.",
+      "disclosure": {
+        "heading": "Disclosure of information",
+        "text": "Any and all information collected through our Internet sites and counselling sessions will be strictly confidential and will not be sold, rented, or otherwise disclosed to any third party not actively engaged in providing services to our customers. We shall always protect your personal information. However, Baunad doo Tuzla shall be compelled to disclose the personal information of a user if he/she poses a danger to himself/herself/others, is suspected of/reported for child abuse or if disclosure of his/her records are needed for any legal procedure being taken against him/her. Baunad doo Tuzla is not responsible if you disclose personal information during consultation or on public thread forums or by being careless in protecting your password of your sign in."
+      },
+      "security": {
+        "heading": "Security of information",
+        "text": "It is our policy to protect your personal information from unauthorized access or from being misused. For that we take care to protect your information through security measures available through technologically. We never record online video sessions in order to protect your privacy. The employees at Baunad doo Tuzla are trained and conversant with security policies and measures. They realize that any breach of information security on their part will lead to severe disciplinary action and even termination of their employment at Baunad doo Tuzla."
+      },
+      "payment": {
+        "heading": "Payment information",
+        "text": "Credit card number and/or other financial information is collected for the billing and payment processes, including but not limited to the use and disclosure of such credit card number and information to third parties as necessary to complete such billing operation. The credit card or debit card details are transacted upon secure sites of approved payment gateways which are digitally under encryption, thereby providing the highest possible degree of care as per current technology. Baunad doo Tuzla does not save your credit card or debit card details."
+      },
+      "information": {
+        "heading": "Deleting and editing of information",
+        "text": "We never record video sessions to protect your identity. We will delete all your personal information from our systems if we receive a written request from you to us to do so. We will immediately proceed to delete all your personal information from our systems unless we are bound legally to do so. However, please keep in mind that we need to retain some information for maintaining records. Some residual information will always remain in our records even though we try to delete them."
+      },
+      "browser": {
+        "heading": "Browser and usage information",
+        "text": "We collect browser information like IP address, browser type, your geographic location, time spent on different pages, information on page browsing, hardware information in case you are using a mobile device to log into our website, information on the operating system for the purpose of analyzing the profile of visitors to our website, their behavior online especially in their choice of content and services. Analyzing this data would enable us to understand our visitors better and improve our content and services. Information that we have about user behavior also helps us troubleshoot technical problems and solve billing or payment errors. No personal identifying information will be tied to the results of anonymous and aggregated data. We are not bound by the Privacy Policies of the third party websites."
+      },
+      "consent": {
+        "heading": "Consent to this privacy policy",
+        "text": "By using the services or by otherwise giving us your information, you will be deemed to have read, understood and agreed to the practices and policies outlined in this privacy policy and agree to be bound by the privacy policy. You hereby consent to our collection, use and sharing, disclosure of your information as described in this privacy policy. We reserve the right to change, modify, add or delete portions of the terms of this privacy policy, at our sole discretion, at any time. If you do not agree with this privacy policy at any time, do not use any of the services or give us any of your information. If you use the services on behalf of someone else, such as your child, or an entity, such as your employer, you represent that you are authorized by such individual or entity to do (i) accept this privacy policy on such individual’s or entity’s behalf, and (ii) consent on behalf of such individual or entity to our collection, use and disclosure of such individual’s or entity’s information as described in this privacy policy."
+      },
+      "contact": {
+        "heading": "Contact us",
+        "text": "For queries or for communicating to us about any privacy issue, please contact us at:"
+      },
+      "address": "Our office address is:",
+      "updated": "This Privacy notice was last updated on December 11 th 2017 and is deemed effective as of this date."
+    },
     "checkoutView": {
       "heading": "Potvrda narudžbe",
       "pleasePay": "Molimo uplatite xxx na bankovni računu:",
