--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -178,7 +178,7 @@
       "sumWithPackageDiscount": "Suma iza kominacijskog popusta",
       "voucherDiscount": "Voucher popust",
       "total": "Ukupno",
-      "name": "Ime",
+      "name": "Ime / prezime",
       "phone": "Telefon",
       "email": "E-pošta",
       "comment": "Komentar",
@@ -186,6 +186,7 @@
       "placeOrder": "Zakažite",
       "close": "Blizu",
       "issue": "Tema",
+      "invoiceText": "Sa fakturom, odlučite da platite naše usluge na isti način na koji plaćate druge račune, odnosno putem banke ili pošte. Dobićete fakturu poslatu na vašu adresu e-pošte sa uputstvima za plaćanje. Kada primimo uplatu na naš bankovni račun, kontaktiraćemo vas kako bismo zadržali vreme za vaše psihološko savjetovanje.",
       "stripe": {
         "invalid_number": "Broj kartice nije važeći broj kreditne kartice.",
         "incomplete_number": "Broj kartice nije važeći broj kreditne kartice.",
@@ -206,11 +207,15 @@
         "invalid_expiry_year_past": "Neispravna godina isteka."
       },
       "validation": {
-        "\"name\" is required": "Ime je obavezno",
+        "\"name\" is required": "Ime / prezime je obavezno",
         "\"phone\" is required": "Telefon je potreban",
-        "\"street\" is required": "Ulica je potrebna",
+        "\"street\" is required": "Ulica je potreban",
         "\"postal\" is required": "Poštanski broj je potreban",
-        "\"phone\" is not allowed to be empty": "",
+        "\"issue\" is required": "Tema je potreban",
+        "\"issue\" is not allowed to be empty": "Tema je potreban",
+        "\"timeframe\" is required": "Vremenska preferencija je potreban",
+        "\"timeframe\" is not allowed to be empty": "Vremenska preferencija je potreban",
+        "\"phone\" is not allowed to be empty": "Telefon je potreban",
         "\"city\" is required": "Grad je potreban",
         "\"mail\" is required": "E-pošta je potrebna",
         "\"mail\" must be a valid email": "E-pošta mora biti važeća adresa e-pošte",
