--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -131,38 +131,38 @@
       "purchase": "Zakažite"
     },
     "privacyPolicyView": {
-      "heading": "Baunad privacy policy",
-      "preamble": "Your privacy is very important to us. We designed our Privacy Policy to make important disclosures about how you can use Zdravlje.nu and how we collect and use your content and information. We encourage you to read the Privacy Policy in its entirety.",
+      "heading": "Politika privatnosti",
+      "preamble": "Vaša privatnost nam je jako bitna. Osmislili smo našu Politiku privatnosti da bismo Vam mogli prenijeti informacije o tome kako koristiti Zdravlje.nu i o načinu na koji prikupljamo i koristimo Vaš sadržaj i informacije. Podstičemo Vas da pročitate Politiku privatnosti u potpunosti. Zdravlje.nu je podružnica firme Baunad doo Tuzla.",
       "disclosure": {
-        "heading": "Disclosure of information",
-        "text": "Any and all information collected through our Internet sites and counselling sessions will be strictly confidential and will not be sold, rented, or otherwise disclosed to any third party not actively engaged in providing services to our customers. We shall always protect your personal information. However, Baunad doo Tuzla shall be compelled to disclose the personal information of a user if he/she poses a danger to himself/herself/others, is suspected of/reported for child abuse or if disclosure of his/her records are needed for any legal procedure being taken against him/her. Baunad doo Tuzla is not responsible if you disclose personal information during consultation or on public thread forums or by being careless in protecting your password of your sign in."
+        "heading": "Čuvanje podataka",
+        "text": "Sve informacije koje prikupimo putem naše internet stranice i sesija sa klijentima su strogo povjerljive, te neće biti prodavane, iznajmljivane ili na neki drugi način dostupne trećim strankama koje nisu aktivno uključene u pružanje usluga našim klijentima. Mi ćemo uvijek štititi Vaše privatne informacije. Baunad doo Tuzla će otkriti lične informacije samo u slučaju da korisnik pokaže ozbiljnu namjeru da našteti sebi ili drugima, u slučaju da je pod sumnjom za nasilje nad djetetom/djecom, te ukoliko su podaci o osobi zatreženi sudskim nalogom i potrebni u pravnoj procedure koja se vodi protiv osobe. Firma Baunad doo Tuzla nije odgovorna za Vaše otkrivanje informacija o sebi tokom korištenja naših usluga i/ili na javnim forumima, kao ni zbog neopreznosti u zaštiti Vaše šifre prilikom pristupa stranici."
       },
       "security": {
-        "heading": "Security of information",
-        "text": "It is our policy to protect your personal information from unauthorized access or from being misused. For that we take care to protect your information through security measures available through technologically. We never record online video sessions in order to protect your privacy. The employees at Baunad doo Tuzla are trained and conversant with security policies and measures. They realize that any breach of information security on their part will lead to severe disciplinary action and even termination of their employment at Baunad doo Tuzla."
+        "heading": "Sigurnost podataka",
+        "text": "Naša politika je usmjerena na zaštitu Vaših informacija od neovlaštenog pristupa i zloupotrebe. Zbog toga vodimo računa da zaštitimo te informacije kroz niz tehnološki dostupnih sigurnosnih mjera. Nikada ne pravimo zvučne ili video snimke Vaših online sesija s ciljm zaštite Vaše privatnosti. Uposlenici firme Baunad doo Tuzla su upoznati i imaju iskustva sa pravilnicima i mjerama sigurnosti. U potpunosti shvataju da bilo koji propust u čuvanju Vaših informacija sa njihove strane rezultira jakim disciplinarnim mjerama kao i mogućim završetkom poslovanja unutar Baunad doo Tuzla."
       },
       "payment": {
-        "heading": "Payment information",
-        "text": "Credit card number and/or other financial information is collected for the billing and payment processes, including but not limited to the use and disclosure of such credit card number and information to third parties as necessary to complete such billing operation. The credit card or debit card details are transacted upon secure sites of approved payment gateways which are digitally under encryption, thereby providing the highest possible degree of care as per current technology. Baunad doo Tuzla does not save your credit card or debit card details."
+        "heading": "Informacije o plaćanju",
+        "text": "Broj kreditne kartice i/ili druge finansijske informacije će biti prikupljanje u svrhu procesa plaćanja i naplaćivanja, uključujući ali ne i ograničeno na upotrebu i otkrivanje tih informacija trećim strankama neophodnim za izvršavanje operacija naplaćivanja. Detalji kreditnih i debitnih kartica će biti prenošeni sigurnim stranicama sa provjerenim sistemom sigurne autorizacije i naplate kartica putem interneta (payment gateway systems) koji su digitalno šifrirani, i time pružaju najveći mogući stepen zaštite dostupan putem trenutne tehnologije. Baunad doo Tuzla neće čuvati podatke o Vašim kreditnim i debitnim karticama."
       },
       "information": {
-        "heading": "Deleting and editing of information",
-        "text": "We never record video sessions to protect your identity. We will delete all your personal information from our systems if we receive a written request from you to us to do so. We will immediately proceed to delete all your personal information from our systems unless we are bound legally to do so. However, please keep in mind that we need to retain some information for maintaining records. Some residual information will always remain in our records even though we try to delete them."
+        "heading": "Brisanje I uređivanje podataka",
+        "text": "Nikada ne snimamo video sesije sa ciljem zaštite identiteta klijenata. Obrisaćemo sve privatne informacije iz naših sistema ukoliko dobijemo pisani zahtjev od Vas da to učinimo. U tom slučaju sve Vaše private informacije će biti obrisane iz naših sistema bez odgode, osim u slučaju da nam je to zakonom onemogućeno. Molimo Vas da imate na umu da nam je potrebno zadržati neke od informacija zbog održavanja evidencije o poslovanju. Neke od tih rezidualnih informacija će uvijek ostati u našoj evidenciji iako brišemo sve što je moguće izbrisati."
       },
       "browser": {
-        "heading": "Browser and usage information",
-        "text": "We collect browser information like IP address, browser type, your geographic location, time spent on different pages, information on page browsing, hardware information in case you are using a mobile device to log into our website, information on the operating system for the purpose of analyzing the profile of visitors to our website, their behavior online especially in their choice of content and services. Analyzing this data would enable us to understand our visitors better and improve our content and services. Information that we have about user behavior also helps us troubleshoot technical problems and solve billing or payment errors. No personal identifying information will be tied to the results of anonymous and aggregated data. We are not bound by the Privacy Policies of the third party websites."
+        "heading": "Internet pretraživač I informacije o upotrebi",
+        "text": "Skupljamo informacije o internet pretraživačima poput: IP adrese, tipa pretraživača, geografske lokacije, vremena provedenog na pojedinim stranicama, informacije o hardveru (u slučaju korištenja mobilnih uređaja prilikom pristupanja stranici) i informacije o operativnom sistemu, u svrhu analiziranja profila korisnika naše stranice i njihovog online ponašanja; posebno izbora sadržaja i usluga. Analiza ovih podataka nam omogućava da bolje razumijemo naše posjetioce kao i da poboljšavamo naš sadržaj i uslugu. Informacije koje imamo o ponašanju korisnika nam pomažu i u pronalaženju tehnoloških problema i rješavanju potencijalnih grešaka u procesu plaćanja i naplaćivanja. Vaše lične informacije i identifikacioni podaci neće biti uparivani sa ovako prikupljenim informacijama i rezultatima anonimnih i spojenih podataka. Nismo vezani Politikom privatnosti ostalih stranica i vanjskih pružatelja usluga koje koristite tokom korištenja naših usluga."
       },
       "consent": {
-        "heading": "Consent to this privacy policy",
-        "text": "By using the services or by otherwise giving us your information, you will be deemed to have read, understood and agreed to the practices and policies outlined in this privacy policy and agree to be bound by the privacy policy. You hereby consent to our collection, use and sharing, disclosure of your information as described in this privacy policy. We reserve the right to change, modify, add or delete portions of the terms of this privacy policy, at our sole discretion, at any time. If you do not agree with this privacy policy at any time, do not use any of the services or give us any of your information. If you use the services on behalf of someone else, such as your child, or an entity, such as your employer, you represent that you are authorized by such individual or entity to do (i) accept this privacy policy on such individual’s or entity’s behalf, and (ii) consent on behalf of such individual or entity to our collection, use and disclosure of such individual’s or entity’s information as described in this privacy policy."
+        "heading": "Suglasnost sa ovom politikom privatnosti",
+        "text": "Korištenjem naših usluga i davanjem Vaših informacija, smatraćemo da ste pročitali, razumjeli i složili se sa našim pravilnikom i načinom rada izloženim u ovoj Politici privatnosti, te da se ona primjenjuje na Vas kao korisnika naših usluga. Time pristajete na prikupljanje, upotrebu i dijeljenje, kao i prenošenje Vaših informacija na način na koji je to opisano ovim pravilnikom. Zadržavamo pravo izmjena, dopuna ili brisanja pojedinih dijelova Politike privatnosti po našem vlastitom nahođenju, u bilo kojem trenutku. Ukoliko se ne slažete sa ovom Politikom privatnosti, Vaš izbor je ne korisiti naše usluge i ne davati nam Vaše informacije. Ukoliko korisitite naše usluge u ime nekog drugog, npr. Vašeg djeteta ili drugog entiteta poput poslodavca, smatraćemo da ste ovlašteni od strane takvog entiteta da to činite, (i) da prihvatate ovu Politiku privatnosti u njihovo ime, (ii) da pristajete na prikupljanje, upotrebu i dijeljenje, kao i prenošenje informacija osoba koje zastupate na način na koji je to opisano ovom Politikom privatnosti."
       },
       "contact": {
-        "heading": "Contact us",
-        "text": "For queries or for communicating to us about any privacy issue, please contact us at:"
+        "heading": "Kontaktirajte nas",
+        "text": "Za upite i informacije o pitanjima zaštite privatnosti možete nas kontaktirati na:"
       },
-      "address": "Our office address is:",
-      "updated": "This Privacy notice was last updated on December 11 th 2017 and is deemed effective as of this date."
+      "address": "Adresa našeg ureda je:",
+      "updated": "Ovaj dokument je zadnji put izmjenjen 11. decembra 2017. od kada stupa na snagu."
     },
     "checkoutView": {
       "heading": "Potvrda narudžbe",
