--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -151,7 +151,7 @@
       },
       "book": {
         "heading": "How do I book an appointment?",
-        "text": "You book an appointment by contacting us at:",
+        "text1": "You book an appointment by contacting us at:",
         "text2": "Alternately you can prepay for counselling on zdravlje.nu and we will contact you after we have received the payment. During the payment process you will have the option to choose time slots that would suit you best."
       },
       "safe": {
