--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -352,7 +352,7 @@
       "callbackAffirmation": "Mi će mo vas zovnuti da rezerviramo termin za razgovor sa našim psiholozima kada smo primili novac.",
       "invoiceAffirmation": "Dobićete fakturu na vašu e-poštu u roku od 24 sata sa detaljima plaćanja.",
       "item": "Stavka",
-      "weeks": "Sedmica",
+      "weeks": "Komada",
       "price": "Cijena",
       "sum": "Suma",
       "packageDiscount": "Kombinacija popust",
@@ -363,7 +363,7 @@
       "phone": "Telefon",
       "email": "E-pošta",
       "comment": "Komentar",
-      "back": "Natrag",
+      "back": "Nazad",
       "placeOrder": "Zakažite",
       "close": "Blizu",
       "issue": "Tema",
@@ -389,18 +389,18 @@
       },
       "validation": {
         "\"name\" is required": "Ime / prezime je obavezno",
+        "\"name\" is not allowed to be empty": "Ime / prezime je obavezno",
         "\"phone\" is required": "Telefon je potreban",
-        "\"street\" is required": "Ulica je potreban",
-        "\"postal\" is required": "Poštanski broj je potreban",
-        "\"issue\" is required": "Tema je potreban",
-        "\"issue\" is not allowed to be empty": "Tema je potreban",
-        "\"timeframe\" is required": "Vremenska preferencija je potreban",
-        "\"timeframe\" is not allowed to be empty": "Vremenska preferencija je potreban",
         "\"phone\" is not allowed to be empty": "Telefon je potreban",
+        "\"street\" is required": "Ulica je potreban",
+        "\"street\" is not allowed to be empty": "Ulica je potreban",
+        "\"postal\" is required": "Poštanski broj je potreban",
+        "\"postal\" is not allowed to be empty": "Poštanski broj je potreban",
         "\"city\" is required": "Grad je potreban",
+        "\"city\" is not allowed to be empty": "Grad je potreban",
         "\"mail\" is required": "E-pošta je potrebna",
+        "\"mail\" is not allowed to be empty": "E-pošta je potrebna",
         "\"mail\" must be a valid email": "E-pošta mora biti važeća adresa e-pošte",
-        "\"mail\" is not allowed to be empty": "E-pošta nije dozvoljena da bude prazna",
         "wrongRegexFormat": "Greška, pogrešan format"
       },
       "issues": {
