--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -79,7 +79,7 @@
       "signature": "Mahatma Ghandi"
     },
     "quoteImageView": {
-      "quote1": "\"Tajna promjena je da fokusirate svu svoju energiju,",
+      "quote1": "\"Tajna promjene je da fokusirate svu svoju energiju,",
       "quote2": " ne na borbu sa starim, već na izgradnji novog.\"",
       "signature": "Sokrates"
     },
