--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -195,7 +195,7 @@
     },
     "introView": {
       "heading": "Psihološko savjetovanje za svakodnevne probleme",
-      "preamble": "Ovdje smo za vas ako trebate s nekim razgovarat. Zdravlje.nu vam nudi psihološko savjetovanje diskretno i po razumnoj cijeni. U razgovoru prepoznajemo koje misli i emocije vas sprečavaju da se osjećate dobro i budete uspješni u životu, te radimo na promjeni.",
+      "preamble": "Tu smo za Vas, ako trebate s nekim razgovarati. Zdravlje.nu Vam nudi psihološko savjetovanje, diskretno i po razumnoj cijeni. U razgovoru prepoznajemo koje misli i emocije Vas sprječavaju da se osjećate dobro i budete uspješni u životu, te radimo na promjeni.",
       "start": "Započnite",
       "cookieText": "Mi koristimo kolačiće za ažuriranje trenutnog porudžbina. Podaci se čuvaju samo privremeno i uklanjaju zajedno sa kompletnom kupovinom."
     },
