--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -197,7 +197,7 @@
       "heading": "Psihološko savjetovanje za svakodnevne probleme",
       "preamble": "Tu smo za Vas, ako trebate s nekim razgovarati. Zdravlje.nu Vam nudi psihološko savjetovanje, diskretno i po razumnoj cijeni. U razgovoru prepoznajemo koje misli i emocije Vas sprječavaju da se osjećate dobro i budete uspješni u životu, te radimo na promjeni.",
       "start": "Započnite",
-      "cookieText": "Mi koristimo kolačiće za ažuriranje trenutnog porudžbina. Podaci se čuvaju samo privremeno i uklanjaju zajedno sa kompletnom kupovinom."
+      "cookieText": "Kolačiće koristimo radi pravilnog funkcionisanja određenih ulsuga. Oni su privremeni i nestaju kada isključite browser. Korištenjem ove web stranice prihvaćate korištenje kolačića."
     },
     "issueView": {
       "heading": "Napravite prvi korak za bolje sutra",
