--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -580,8 +580,8 @@
       "weeks": "Komada",
       "price": "Cijena",
       "sum": "Suma",
-      "packageDiscount": "Kombinacija popust",
-      "sumWithPackageDiscount": "Suma iza kominacijskog popusta",
+      "packageDiscount": "Popust",
+      "sumWithPackageDiscount": "Suma iza popusta",
       "voucherDiscount": "Voucher popust",
       "total": "Ukupno",
       "name": "Ime i prezime",
