--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -221,8 +221,8 @@
           "description": "Trebate li pomoć o olakšavanju bola?"
         },
         "depression": {
-          "name": "Depresija",
-          "description": "Osjećate li se tužno ili depresivno?"
+          "name": "Tuga",
+          "description": "Osjećate li se tužno ili sumorno?"
         },
         "kids": {
           "name": "Dijete",
@@ -646,8 +646,8 @@
           "description": "Trebate li pomoć o olakšavanju bola?"
         },
         "depression": {
-          "name": "Depresija",
-          "description": "Osjećate li se tužno ili depresivno?"
+          "name": "Tuga",
+          "description": "Osjećate li se tužno ili sumorno?"
         },
         "kids": {
           "name": "Dijete",
